# cmc-terrain-old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
docs/: Task.md  diamond-square.md
render/: Camera.cpp  Camera.h  Context.cpp  Context.h  Framebuffer.cpp  Framebuffer.h  Mesh.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  WaterController.cpp  WaterController.h  map.cpp  map.h
ui/: imgui_impl_sdl_gl3.cpp
